# OOP-Labs

./: README.md
L1/: CMakeLists.txt  main.cpp
L1/include/: sol.h
L1/src/: sol.cpp
L1/test/: test01.cpp
L2/: CMakeLists.txt  main.cpp
L2/src/: BitString.cpp
L6/: CMakeLists.txt  main.cpp
L6/include/: Dragon.h  NPC.h  Observer.h  bull.h  consoleobserv.h  factory.h  logobserv.h  toad.h  visitor.h
L6/npc/: bull.cpp  dragon.cpp  toad.cpp
L6/tests/: test_npcs.txt  tests.cpp
L7/: CMakeLists.txt
L7/include/: NPC.h  bull.h  frog.h
L7/src/: Dragon.cpp  Frog.cpp  NPC.cpp  bull.cpp  main.cpp
